学生一覧機能の作成

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <% @tudents.each do |student| %>
+  <% @students.each do |student| %>
     <div class="content_post" style="background-image: url(<%= student.image %>);">
       <p><%= student.text %></p>
       <span class="name">
