--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
   </head>
 
   <body>
+      <header class="header">
+      <div class="header__bar row">
+        <h1 class="grid-6"><a href="/">Attendance confirmation</a></h1>
+        <div class="user_nav grid-6">
+          <a class="post" href="/students/new">管理者</a>
+        </div>
+      </div>
+    </header>
     <%= yield %>
+        <footer>
+      <p>
+        Copyright Y.Mayumi 2023.
+      </p>
+    </footer>
   </body>
 </html>
